// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic math use-case example can parse (123 + 456) * (678 - 987) 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [
                AST {
                  "children": [],
                  "code": "(",
                  "end": 1,
                  "start": 0,
                  "type": "LEFT_PAREN",
                },
                AST {
                  "children": [
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "123",
                              "end": 4,
                              "start": 1,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "123",
                          "end": 4,
                          "start": 1,
                          "type": "TERM",
                        },
                        AST {
                          "children": [],
                          "code": " ",
                          "end": 5,
                          "start": 4,
                          "type": "WHITESPACE",
                        },
                      ],
                      "code": "123 ",
                      "end": 5,
                      "start": 1,
                      "type": "TERM",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": "+",
                          "end": 6,
                          "start": 5,
                          "type": "ADDITION",
                        },
                      ],
                      "code": "+",
                      "end": 6,
                      "start": 5,
                      "type": "OPERATION",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": " ",
                          "end": 7,
                          "start": 6,
                          "type": "WHITESPACE",
                        },
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "456",
                              "end": 10,
                              "start": 7,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "456",
                          "end": 10,
                          "start": 7,
                          "type": "TERM",
                        },
                      ],
                      "code": " 456",
                      "end": 10,
                      "start": 6,
                      "type": "TERM",
                    },
                  ],
                  "code": "123 + 456",
                  "end": 10,
                  "start": 1,
                  "type": "EXPRESSION",
                },
                AST {
                  "children": [],
                  "code": ")",
                  "end": 11,
                  "start": 10,
                  "type": "RIGHT_PAREN",
                },
              ],
              "code": "(123 + 456)",
              "end": 11,
              "start": 0,
              "type": "SUB_EXPRESSION",
            },
          ],
          "code": "(123 + 456)",
          "end": 11,
          "start": 0,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 12,
          "start": 11,
          "type": "WHITESPACE",
        },
      ],
      "code": "(123 + 456) ",
      "end": 12,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 13,
          "start": 12,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 13,
      "start": 12,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 14,
          "start": 13,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [
                AST {
                  "children": [],
                  "code": "(",
                  "end": 15,
                  "start": 14,
                  "type": "LEFT_PAREN",
                },
                AST {
                  "children": [
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "678",
                              "end": 18,
                              "start": 15,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "678",
                          "end": 18,
                          "start": 15,
                          "type": "TERM",
                        },
                        AST {
                          "children": [],
                          "code": " ",
                          "end": 19,
                          "start": 18,
                          "type": "WHITESPACE",
                        },
                      ],
                      "code": "678 ",
                      "end": 19,
                      "start": 15,
                      "type": "TERM",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": "-",
                          "end": 20,
                          "start": 19,
                          "type": "SUBTRACTION",
                        },
                      ],
                      "code": "-",
                      "end": 20,
                      "start": 19,
                      "type": "OPERATION",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": " ",
                          "end": 21,
                          "start": 20,
                          "type": "WHITESPACE",
                        },
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "987",
                              "end": 24,
                              "start": 21,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "987",
                          "end": 24,
                          "start": 21,
                          "type": "TERM",
                        },
                      ],
                      "code": " 987",
                      "end": 24,
                      "start": 20,
                      "type": "TERM",
                    },
                  ],
                  "code": "678 - 987",
                  "end": 24,
                  "start": 15,
                  "type": "EXPRESSION",
                },
                AST {
                  "children": [],
                  "code": ")",
                  "end": 25,
                  "start": 24,
                  "type": "RIGHT_PAREN",
                },
              ],
              "code": "(678 - 987)",
              "end": 25,
              "start": 14,
              "type": "SUB_EXPRESSION",
            },
          ],
          "code": "(678 - 987)",
          "end": 25,
          "start": 14,
          "type": "TERM",
        },
      ],
      "code": " (678 - 987)",
      "end": 25,
      "start": 13,
      "type": "TERM",
    },
  ],
  "code": "(123 + 456) * (678 - 987)",
  "end": 25,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse (123+456)*(678-987) 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [
                AST {
                  "children": [],
                  "code": "(",
                  "end": 1,
                  "start": 0,
                  "type": "LEFT_PAREN",
                },
                AST {
                  "children": [
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "123",
                              "end": 4,
                              "start": 1,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "123",
                          "end": 4,
                          "start": 1,
                          "type": "TERM",
                        },
                      ],
                      "code": "123",
                      "end": 4,
                      "start": 1,
                      "type": "TERM",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": "+",
                          "end": 5,
                          "start": 4,
                          "type": "ADDITION",
                        },
                      ],
                      "code": "+",
                      "end": 5,
                      "start": 4,
                      "type": "OPERATION",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "456",
                              "end": 8,
                              "start": 5,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "456",
                          "end": 8,
                          "start": 5,
                          "type": "TERM",
                        },
                      ],
                      "code": "456",
                      "end": 8,
                      "start": 5,
                      "type": "TERM",
                    },
                  ],
                  "code": "123+456",
                  "end": 8,
                  "start": 1,
                  "type": "EXPRESSION",
                },
                AST {
                  "children": [],
                  "code": ")",
                  "end": 9,
                  "start": 8,
                  "type": "RIGHT_PAREN",
                },
              ],
              "code": "(123+456)",
              "end": 9,
              "start": 0,
              "type": "SUB_EXPRESSION",
            },
          ],
          "code": "(123+456)",
          "end": 9,
          "start": 0,
          "type": "TERM",
        },
      ],
      "code": "(123+456)",
      "end": 9,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 10,
          "start": 9,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 10,
      "start": 9,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [
                AST {
                  "children": [],
                  "code": "(",
                  "end": 11,
                  "start": 10,
                  "type": "LEFT_PAREN",
                },
                AST {
                  "children": [
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "678",
                              "end": 14,
                              "start": 11,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "678",
                          "end": 14,
                          "start": 11,
                          "type": "TERM",
                        },
                      ],
                      "code": "678",
                      "end": 14,
                      "start": 11,
                      "type": "TERM",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": "-",
                          "end": 15,
                          "start": 14,
                          "type": "SUBTRACTION",
                        },
                      ],
                      "code": "-",
                      "end": 15,
                      "start": 14,
                      "type": "OPERATION",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "987",
                              "end": 18,
                              "start": 15,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "987",
                          "end": 18,
                          "start": 15,
                          "type": "TERM",
                        },
                      ],
                      "code": "987",
                      "end": 18,
                      "start": 15,
                      "type": "TERM",
                    },
                  ],
                  "code": "678-987",
                  "end": 18,
                  "start": 11,
                  "type": "EXPRESSION",
                },
                AST {
                  "children": [],
                  "code": ")",
                  "end": 19,
                  "start": 18,
                  "type": "RIGHT_PAREN",
                },
              ],
              "code": "(678-987)",
              "end": 19,
              "start": 10,
              "type": "SUB_EXPRESSION",
            },
          ],
          "code": "(678-987)",
          "end": 19,
          "start": 10,
          "type": "TERM",
        },
      ],
      "code": "(678-987)",
      "end": 19,
      "start": 10,
      "type": "TERM",
    },
  ],
  "code": "(123+456)*(678-987)",
  "end": 19,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 1 + 2 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "1",
              "end": 1,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "1",
          "end": 1,
          "start": 0,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 2,
          "start": 1,
          "type": "WHITESPACE",
        },
      ],
      "code": "1 ",
      "end": 2,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "+",
          "end": 3,
          "start": 2,
          "type": "ADDITION",
        },
      ],
      "code": "+",
      "end": 3,
      "start": 2,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 4,
          "start": 3,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [],
              "code": "2",
              "end": 5,
              "start": 4,
              "type": "NUMBER",
            },
          ],
          "code": "2",
          "end": 5,
          "start": 4,
          "type": "TERM",
        },
      ],
      "code": " 2",
      "end": 5,
      "start": 3,
      "type": "TERM",
    },
  ],
  "code": "1 + 2",
  "end": 5,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 1+2 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "1",
              "end": 1,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "1",
          "end": 1,
          "start": 0,
          "type": "TERM",
        },
      ],
      "code": "1",
      "end": 1,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "+",
          "end": 2,
          "start": 1,
          "type": "ADDITION",
        },
      ],
      "code": "+",
      "end": 2,
      "start": 1,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "2",
              "end": 3,
              "start": 2,
              "type": "NUMBER",
            },
          ],
          "code": "2",
          "end": 3,
          "start": 2,
          "type": "TERM",
        },
      ],
      "code": "2",
      "end": 3,
      "start": 2,
      "type": "TERM",
    },
  ],
  "code": "1+2",
  "end": 3,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 2 * 1 + 3 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "2",
              "end": 1,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "2",
          "end": 1,
          "start": 0,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 2,
          "start": 1,
          "type": "WHITESPACE",
        },
      ],
      "code": "2 ",
      "end": 2,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 3,
          "start": 2,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 3,
      "start": 2,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 4,
          "start": 3,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [],
              "code": "1",
              "end": 5,
              "start": 4,
              "type": "NUMBER",
            },
          ],
          "code": "1",
          "end": 5,
          "start": 4,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 6,
          "start": 5,
          "type": "WHITESPACE",
        },
      ],
      "code": " 1 ",
      "end": 6,
      "start": 3,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "+",
          "end": 7,
          "start": 6,
          "type": "ADDITION",
        },
      ],
      "code": "+",
      "end": 7,
      "start": 6,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 8,
          "start": 7,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [],
              "code": "3",
              "end": 9,
              "start": 8,
              "type": "NUMBER",
            },
          ],
          "code": "3",
          "end": 9,
          "start": 8,
          "type": "TERM",
        },
      ],
      "code": " 3",
      "end": 9,
      "start": 7,
      "type": "TERM",
    },
  ],
  "code": "2 * 1 + 3",
  "end": 9,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 2 * 3 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "2",
              "end": 1,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "2",
          "end": 1,
          "start": 0,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 2,
          "start": 1,
          "type": "WHITESPACE",
        },
      ],
      "code": "2 ",
      "end": 2,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 3,
          "start": 2,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 3,
      "start": 2,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 4,
          "start": 3,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [],
              "code": "3",
              "end": 5,
              "start": 4,
              "type": "NUMBER",
            },
          ],
          "code": "3",
          "end": 5,
          "start": 4,
          "type": "TERM",
        },
      ],
      "code": " 3",
      "end": 5,
      "start": 3,
      "type": "TERM",
    },
  ],
  "code": "2 * 3",
  "end": 5,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 2*1+3 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "2",
              "end": 1,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "2",
          "end": 1,
          "start": 0,
          "type": "TERM",
        },
      ],
      "code": "2",
      "end": 1,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 2,
          "start": 1,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 2,
      "start": 1,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "1",
              "end": 3,
              "start": 2,
              "type": "NUMBER",
            },
          ],
          "code": "1",
          "end": 3,
          "start": 2,
          "type": "TERM",
        },
      ],
      "code": "1",
      "end": 3,
      "start": 2,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "+",
          "end": 4,
          "start": 3,
          "type": "ADDITION",
        },
      ],
      "code": "+",
      "end": 4,
      "start": 3,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "3",
              "end": 5,
              "start": 4,
              "type": "NUMBER",
            },
          ],
          "code": "3",
          "end": 5,
          "start": 4,
          "type": "TERM",
        },
      ],
      "code": "3",
      "end": 5,
      "start": 4,
      "type": "TERM",
    },
  ],
  "code": "2*1+3",
  "end": 5,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 2*3 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "2",
              "end": 1,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "2",
          "end": 1,
          "start": 0,
          "type": "TERM",
        },
      ],
      "code": "2",
      "end": 1,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 2,
          "start": 1,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 2,
      "start": 1,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "3",
              "end": 3,
              "start": 2,
              "type": "NUMBER",
            },
          ],
          "code": "3",
          "end": 3,
          "start": 2,
          "type": "TERM",
        },
      ],
      "code": "3",
      "end": 3,
      "start": 2,
      "type": "TERM",
    },
  ],
  "code": "2*3",
  "end": 3,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 123 - (12 + 123) * 456 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "123",
              "end": 3,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "123",
          "end": 3,
          "start": 0,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 4,
          "start": 3,
          "type": "WHITESPACE",
        },
      ],
      "code": "123 ",
      "end": 4,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "-",
          "end": 5,
          "start": 4,
          "type": "SUBTRACTION",
        },
      ],
      "code": "-",
      "end": 5,
      "start": 4,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 6,
          "start": 5,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [
                AST {
                  "children": [],
                  "code": "(",
                  "end": 7,
                  "start": 6,
                  "type": "LEFT_PAREN",
                },
                AST {
                  "children": [
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "12",
                              "end": 9,
                              "start": 7,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "12",
                          "end": 9,
                          "start": 7,
                          "type": "TERM",
                        },
                        AST {
                          "children": [],
                          "code": " ",
                          "end": 10,
                          "start": 9,
                          "type": "WHITESPACE",
                        },
                      ],
                      "code": "12 ",
                      "end": 10,
                      "start": 7,
                      "type": "TERM",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": "+",
                          "end": 11,
                          "start": 10,
                          "type": "ADDITION",
                        },
                      ],
                      "code": "+",
                      "end": 11,
                      "start": 10,
                      "type": "OPERATION",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": " ",
                          "end": 12,
                          "start": 11,
                          "type": "WHITESPACE",
                        },
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "123",
                              "end": 15,
                              "start": 12,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "123",
                          "end": 15,
                          "start": 12,
                          "type": "TERM",
                        },
                      ],
                      "code": " 123",
                      "end": 15,
                      "start": 11,
                      "type": "TERM",
                    },
                  ],
                  "code": "12 + 123",
                  "end": 15,
                  "start": 7,
                  "type": "EXPRESSION",
                },
                AST {
                  "children": [],
                  "code": ")",
                  "end": 16,
                  "start": 15,
                  "type": "RIGHT_PAREN",
                },
              ],
              "code": "(12 + 123)",
              "end": 16,
              "start": 6,
              "type": "SUB_EXPRESSION",
            },
          ],
          "code": "(12 + 123)",
          "end": 16,
          "start": 6,
          "type": "TERM",
        },
        AST {
          "children": [],
          "code": " ",
          "end": 17,
          "start": 16,
          "type": "WHITESPACE",
        },
      ],
      "code": " (12 + 123) ",
      "end": 17,
      "start": 5,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 18,
          "start": 17,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 18,
      "start": 17,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": " ",
          "end": 19,
          "start": 18,
          "type": "WHITESPACE",
        },
        AST {
          "children": [
            AST {
              "children": [],
              "code": "456",
              "end": 22,
              "start": 19,
              "type": "NUMBER",
            },
          ],
          "code": "456",
          "end": 22,
          "start": 19,
          "type": "TERM",
        },
      ],
      "code": " 456",
      "end": 22,
      "start": 18,
      "type": "TERM",
    },
  ],
  "code": "123 - (12 + 123) * 456",
  "end": 22,
  "start": 0,
  "type": "EXPRESSION",
}
`;

exports[`basic math use-case example can parse 123-(12+123)*456 1`] = `
AST {
  "children": [
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "123",
              "end": 3,
              "start": 0,
              "type": "NUMBER",
            },
          ],
          "code": "123",
          "end": 3,
          "start": 0,
          "type": "TERM",
        },
      ],
      "code": "123",
      "end": 3,
      "start": 0,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "-",
          "end": 4,
          "start": 3,
          "type": "SUBTRACTION",
        },
      ],
      "code": "-",
      "end": 4,
      "start": 3,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [
                AST {
                  "children": [],
                  "code": "(",
                  "end": 5,
                  "start": 4,
                  "type": "LEFT_PAREN",
                },
                AST {
                  "children": [
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "12",
                              "end": 7,
                              "start": 5,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "12",
                          "end": 7,
                          "start": 5,
                          "type": "TERM",
                        },
                      ],
                      "code": "12",
                      "end": 7,
                      "start": 5,
                      "type": "TERM",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [],
                          "code": "+",
                          "end": 8,
                          "start": 7,
                          "type": "ADDITION",
                        },
                      ],
                      "code": "+",
                      "end": 8,
                      "start": 7,
                      "type": "OPERATION",
                    },
                    AST {
                      "children": [
                        AST {
                          "children": [
                            AST {
                              "children": [],
                              "code": "123",
                              "end": 11,
                              "start": 8,
                              "type": "NUMBER",
                            },
                          ],
                          "code": "123",
                          "end": 11,
                          "start": 8,
                          "type": "TERM",
                        },
                      ],
                      "code": "123",
                      "end": 11,
                      "start": 8,
                      "type": "TERM",
                    },
                  ],
                  "code": "12+123",
                  "end": 11,
                  "start": 5,
                  "type": "EXPRESSION",
                },
                AST {
                  "children": [],
                  "code": ")",
                  "end": 12,
                  "start": 11,
                  "type": "RIGHT_PAREN",
                },
              ],
              "code": "(12+123)",
              "end": 12,
              "start": 4,
              "type": "SUB_EXPRESSION",
            },
          ],
          "code": "(12+123)",
          "end": 12,
          "start": 4,
          "type": "TERM",
        },
      ],
      "code": "(12+123)",
      "end": 12,
      "start": 4,
      "type": "TERM",
    },
    AST {
      "children": [
        AST {
          "children": [],
          "code": "*",
          "end": 13,
          "start": 12,
          "type": "MULTIPLICATION",
        },
      ],
      "code": "*",
      "end": 13,
      "start": 12,
      "type": "OPERATION",
    },
    AST {
      "children": [
        AST {
          "children": [
            AST {
              "children": [],
              "code": "456",
              "end": 16,
              "start": 13,
              "type": "NUMBER",
            },
          ],
          "code": "456",
          "end": 16,
          "start": 13,
          "type": "TERM",
        },
      ],
      "code": "456",
      "end": 16,
      "start": 13,
      "type": "TERM",
    },
  ],
  "code": "123-(12+123)*456",
  "end": 16,
  "start": 0,
  "type": "EXPRESSION",
}
`;
